tests/dataset/job/compiler/c/q19.error
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c: In function ‘test_Q19_finds_female_voice_actress_in_US_Japan_release_between_2005_and_2009’:
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:382:23: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  382 |           .len != tmp1.len) {
      |                       ^
      |                       ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:392:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  392 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:455:30: warning: implicit declaration of function ‘matches_item_list_t_create’ [-Wimplicit-function-declaration]
  455 |   matches_item_list_t tmp4 = matches_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:456:15: error: ‘(aka_name_t *)&aka_name’ is a pointer; did you mean to use ‘->’?
  456 |       aka_name.len * name.len * cast_info.len * char_name.len * role_type.len *
      |               ^
      |               ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:456:26: error: ‘(name_t *)&name’ is a pointer; did you mean to use ‘->’?
  456 |       aka_name.len * name.len * cast_info.len * char_name.len * role_type.len *
      |                          ^
      |                          ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:456:42: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  456 |       aka_name.len * name.len * cast_info.len * char_name.len * role_type.len *
      |                                          ^
      |                                          ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:456:58: error: ‘(char_name_t *)&char_name’ is a pointer; did you mean to use ‘->’?
  456 |       aka_name.len * name.len * cast_info.len * char_name.len * role_type.len *
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:456:74: error: ‘(role_type_t *)&role_type’ is a pointer; did you mean to use ‘->’?
  456 |       aka_name.len * name.len * cast_info.len * char_name.len * role_type.len *
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:457:12: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  457 |       title.len * movie_companies.len * company_name.len * movie_info.len *
      |            ^
      |            ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:457:34: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  457 |       title.len * movie_companies.len * company_name.len * movie_info.len *
      |                                  ^
      |                                  ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:457:53: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  457 |       title.len * movie_companies.len * company_name.len * movie_info.len *
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:457:70: error: ‘(movie_info_t *)&movie_info’ is a pointer; did you mean to use ‘->’?
  457 |       title.len * movie_companies.len * company_name.len * movie_info.len *
      |                                                                      ^
      |                                                                      ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:458:16: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  458 |       info_type.len);
      |                ^
      |                ->
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:507:61: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  507 |                       if (!(contains_list_string(matches, ci.note) &&
      |                                                           ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:71:54: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:510:48: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  510 |                             (contains_string(mc.note, "(USA)") ||
      |                                              ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:511:48: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  511 |                              contains_string(mc.note, "(worldwide)")) &&
      |                                              ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:513:49: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  513 |                             ((contains_string(mi.info, "Japan:") &&
      |                                               ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:514:49: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  514 |                               contains_string(mi.info, "200")) ||
      |                                               ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:515:49: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  515 |                              (contains_string(mi.info, "USA:") &&
      |                                               ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:516:49: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  516 |                               contains_string(mi.info, "200"))) &&
      |                                               ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:517:65: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  517 |                             n.gender == "f" && contains_string(n.name, "Ang") &&
      |                                                                ~^~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:536:23: error: conflicting types for ‘matches’; have ‘matches_item_list_t’
  536 |   matches_item_list_t matches = tmp4;
      |                       ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:450:15: note: previous definition of ‘matches’ with type ‘list_string’
  450 |   list_string matches = list_string_create(4);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:537:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  537 |   int tmp16 = int_create(matches.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:541:10: error: request for member ‘data’ in something not a structure or union
  541 |     tmp16.data[tmp17] = r.actress;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:544:8: error: request for member ‘len’ in something not a structure or union
  544 |   tmp16.len = tmp17;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:549:10: error: request for member ‘data’ in something not a structure or union
  549 |     tmp19.data[tmp20] = r.movie;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:552:8: error: request for member ‘len’ in something not a structure or union
  552 |   tmp19.len = tmp20;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:553:66: error: incompatible type for argument 1 of ‘_min_string’
  553 |   result_t result[] = {(result_t){.voicing_actress = _min_string(tmp16),
      |                                                                  ^~~~~
      |                                                                  |
      |                                                                  int
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:554:63: error: incompatible type for argument 1 of ‘_min_string’
  554 |                                   .voiced_movie = _min_string(tmp19)}};
      |                                                               ^~~~~
      |                                                               |
      |                                                               int
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:564:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  564 |     _json_string(it.voicing_actress);
      |                  ~~^~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:568:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  568 |     _json_string(it.voiced_movie);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:573:7: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  573 |       result;
      |       ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:575:13: error: request for member ‘data’ in something not a structure or union
  575 |   free(tmp16.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq191033871898/001/prog.c:576:13: error: request for member ‘data’ in something not a structure or union
  576 |   free(tmp19.data);
      |             ^
